<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/custom_layout_amt"
                        android:layout_height="wrap_content"></TextView>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/amount_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/custom_layout_type"
                        android:layout_height="wrap_content"></TextView>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/type_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:text="@string/custom_layout_note"
                        android:layout_height="wrap_content"></TextView>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/note_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:text="@string/custom_layout_btn"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:id="@+id/btnCancel"
                        android:textColor="@android:color/white"
                        android:background="@color/navbar"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="match_parent"
                        android:text="@string/custom_layout_save"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:id="@+id/btnSave"
                        android:textColor="@android:color/white"
                        android:background="@color/navbar"
                        android:layout_height="wrap_content"/>


                </RelativeLayout>



            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>