<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DashBoardFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income_dashboard"
                        android:textAppearance="?android:textAppearanceMedium">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense_dashboard"
                        android:textAppearance="?android:textAppearanceMedium">

                    </TextView>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/income_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income_value"
                        android:textAppearance="?android:textAppearanceMedium">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/expense_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense_value"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/holo_red_dark">

                    </TextView>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/income_dashboard"
                    android:textAppearance="?android:textAppearanceLarge" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_dash_income"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/expense_dashboard"
                    android:textAppearance="?android:textAppearanceLarge" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_dash_expense"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="160dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/expense_ft_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@color/navbar"
                android:padding="5dp"
                android:text="@string/expense_dashboard"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/expense_ft_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:backgroundTint="@color/expense_ft_btn"
                android:elevation="6dp"
                android:src="@drawable/expence"
                android:visibility="invisible"
                app:fabSize="mini"
                app:pressedTranslationZ="12dp" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="90dp">

            <TextView
                android:id="@+id/income_ft_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:background="@color/navbar"
                android:padding="5dp"
                android:text="@string/income_dashboard"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white"
                android:visibility="invisible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/income_ft_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:backgroundTint="@color/income_ft_btn"
                android:elevation="6dp"
                android:src="@drawable/income"
                android:visibility="invisible"
                app:fabSize="mini"
                app:pressedTranslationZ="12dp" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main_plus_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/main_fab_btn"
            android:src="@drawable/income"
            app:fabSize="normal" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>